--- a/.gitignore
+++ b/.gitignore
@@ -44,5 +44,7 @@ app.*.map.json
 /android/app/profile
 /android/app/release
 
-# Documentation
-docs/
+# Firebase
+firebase_app_id_file.json
+google-services.json
+GoogleService-Info.plist
