--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -65,6 +65,8 @@ dependencies:
 
   # WebView
   webview_flutter: ^4.4.2
+  webview_flutter_android: ^3.0.0
+  image_picker: ^1.0.0
 
 dev_dependencies:
   flutter_test:
