--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -62,6 +62,7 @@ dependencies:
   # Icons
   cupertino_icons: ^1.0.8
   firebase_core: ^4.2.0
+  cloud_firestore: ^6.0.3
 
   # WebView
   webview_flutter: ^4.4.2
