--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -63,6 +63,8 @@ dependencies:
   cupertino_icons: ^1.0.8
   firebase_core: ^4.2.0
   cloud_firestore: ^6.0.3
+  firebase_auth: ^6.1.1
+  google_sign_in: ^6.2.1
 
   # WebView
   webview_flutter: ^4.4.2
